Further detail view refinements.

--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -376,11 +376,11 @@
                         <viewControllerLayoutGuide type="bottom" id="TeF-DI-QJB"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BkM-JW-PL8">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="1600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1327"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kj-hO-W41">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="1600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="1327"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2Y-8a-qLP">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="1328"/>
@@ -407,12 +407,17 @@ Two times at WWDC!</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwB-O9-vEU">
-                                                <rect key="frame" x="160" y="416" width="280" height="1"/>
-                                                <color key="backgroundColor" red="0.29019607843137257" green="0.6588235294117647" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="0.0" y="416" width="600" height="1"/>
+                                                <color key="backgroundColor" white="0.84601726398601407" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="acg-jU-6t1"/>
                                                     <constraint firstAttribute="width" constant="280" id="ws0-hV-uGd"/>
                                                 </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="ws0-hV-uGd"/>
+                                                    </mask>
+                                                </variation>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8jU-u9-izq">
                                                 <rect key="frame" x="20" y="437" width="560" height="76"/>
@@ -440,36 +445,31 @@ Two times at WWDC!</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfY-G6-jEd">
-                                                <rect key="frame" x="160" y="1255" width="280" height="1"/>
-                                                <color key="backgroundColor" red="0.29019607843137257" green="0.6588235294117647" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="0.0" y="1255" width="600" height="1"/>
+                                                <color key="backgroundColor" white="0.84680944055944052" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="280" id="ThW-lw-3Hb"/>
                                                     <constraint firstAttribute="height" constant="1" id="qOO-PE-FKS"/>
                                                 </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="ThW-lw-3Hb"/>
+                                                    </mask>
+                                                </variation>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPU-ZA-2M8">
-                                                <rect key="frame" x="160" y="927" width="280" height="1"/>
-                                                <color key="backgroundColor" red="0.66274509803921566" green="0.74901960784313726" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="0.0" y="870" width="600" height="1"/>
+                                                <color key="backgroundColor" white="0.84708260489510501" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="280" id="eXg-wC-O2C"/>
                                                     <constraint firstAttribute="height" constant="1" id="poS-4u-hoD"/>
                                                 </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="eXg-wC-O2C"/>
+                                                    </mask>
+                                                </variation>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQm-Db-mKb">
-                                                <rect key="frame" x="200" y="870" width="200" height="37"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="200" id="4o6-uQ-Wfw"/>
-                                                    <constraint firstAttribute="height" constant="37" id="ahj-GG-T3X"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                                <state key="normal" title="View on GitHub!">
-                                                    <color key="titleColor" red="0.29019607843137257" green="0.6588235294117647" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="didOpenGithubRepo:" destination="ixk-1w-ECw" eventType="touchUpInside" id="5t7-LR-3hO"/>
-                                                </connections>
-                                            </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mi-NS-L7i">
                                                 <rect key="frame" x="213" y="1276" width="175" height="30"/>
                                                 <subviews>
@@ -599,6 +599,21 @@ Two times at WWDC!</string>
                                                     <segue destination="Dyj-yD-7Un" kind="unwind" unwindAction="unwindToMainViewController:" id="lRK-Oh-65a"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQm-Db-mKb">
+                                                <rect key="frame" x="200" y="891" width="200" height="37"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="4o6-uQ-Wfw"/>
+                                                    <constraint firstAttribute="height" constant="37" id="ahj-GG-T3X"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                <state key="normal" title="View on GitHub!">
+                                                    <color key="titleColor" red="0.29019607843137257" green="0.6588235294117647" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="didOpenGithubRepo:" destination="ixk-1w-ECw" eventType="touchUpInside" id="5t7-LR-3hO"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <gestureRecognizers/>
                                         <constraints>
@@ -616,28 +631,34 @@ Two times at WWDC!</string>
                                             <constraint firstAttribute="trailing" secondItem="hVB-pe-aV2" secondAttribute="trailing" constant="20" id="HBc-JB-tLs"/>
                                             <constraint firstItem="zhT-xG-oQN" firstAttribute="top" secondItem="K2Y-8a-qLP" secondAttribute="top" constant="15" id="IDZ-dW-GSZ"/>
                                             <constraint firstAttribute="trailing" secondItem="xx6-iB-pwC" secondAttribute="trailing" id="IcO-kF-0Ol"/>
-                                            <constraint firstItem="UQm-Db-mKb" firstAttribute="top" secondItem="Wv4-RX-X9v" secondAttribute="bottom" constant="20" id="NI1-hZ-y98"/>
+                                            <constraint firstItem="UQm-Db-mKb" firstAttribute="top" secondItem="Wv4-RX-X9v" secondAttribute="bottom" constant="41" id="NI1-hZ-y98"/>
                                             <constraint firstItem="hVB-pe-aV2" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" constant="20" id="OYj-mB-uTo"/>
                                             <constraint firstItem="T5W-GY-yiC" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" constant="20" id="Sdh-di-H2Q"/>
+                                            <constraint firstItem="bPU-ZA-2M8" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" id="TIb-Oz-ZLo"/>
                                             <constraint firstAttribute="trailing" secondItem="T5W-GY-yiC" secondAttribute="trailing" constant="20" id="Tas-XK-4fu"/>
+                                            <constraint firstAttribute="trailing" secondItem="vwB-O9-vEU" secondAttribute="trailing" id="VGm-Fl-KJu"/>
                                             <constraint firstItem="vwB-O9-vEU" firstAttribute="top" secondItem="T5W-GY-yiC" secondAttribute="bottom" constant="19" id="X1K-Wg-cx4"/>
                                             <constraint firstAttribute="centerX" secondItem="dfY-G6-jEd" secondAttribute="centerX" id="XHR-Yp-0dK"/>
+                                            <constraint firstAttribute="trailing" secondItem="dfY-G6-jEd" secondAttribute="trailing" id="aCr-gH-hXh"/>
                                             <constraint firstItem="PXP-GQ-luw" firstAttribute="top" secondItem="K2Y-8a-qLP" secondAttribute="topMargin" constant="5" id="bBO-eO-ygs"/>
                                             <constraint firstAttribute="centerX" secondItem="zhT-xG-oQN" secondAttribute="centerX" id="bip-P0-Fcm"/>
-                                            <constraint firstItem="xx6-iB-pwC" firstAttribute="top" secondItem="bPU-ZA-2M8" secondAttribute="bottom" constant="20" id="bnh-uT-3bm"/>
+                                            <constraint firstItem="xx6-iB-pwC" firstAttribute="top" secondItem="bPU-ZA-2M8" secondAttribute="bottom" constant="77" id="bnh-uT-3bm"/>
                                             <constraint firstItem="T5W-GY-yiC" firstAttribute="top" secondItem="hVB-pe-aV2" secondAttribute="bottom" constant="15" id="cIZ-b0-x0k"/>
                                             <constraint firstAttribute="trailing" secondItem="8jU-u9-izq" secondAttribute="trailing" constant="20" id="cer-j1-6j8"/>
                                             <constraint firstItem="8jU-u9-izq" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" constant="20" id="dIb-Z9-4H4"/>
                                             <constraint firstItem="cXg-Tg-DLf" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" constant="20" id="gdL-1C-VfY"/>
                                             <constraint firstItem="Wv4-RX-X9v" firstAttribute="top" secondItem="ebs-QW-EAg" secondAttribute="bottom" constant="20" id="hVU-x0-hiB"/>
                                             <constraint firstItem="dfY-G6-jEd" firstAttribute="top" secondItem="cXg-Tg-DLf" secondAttribute="bottom" constant="20" id="jnz-Ix-Sh2"/>
+                                            <constraint firstAttribute="trailing" secondItem="bPU-ZA-2M8" secondAttribute="trailing" id="jx2-9m-nek"/>
                                             <constraint firstAttribute="trailing" secondItem="ebs-QW-EAg" secondAttribute="trailing" id="k1e-I8-IE4"/>
                                             <constraint firstItem="Qum-6W-Alm" firstAttribute="centerY" secondItem="zhT-xG-oQN" secondAttribute="centerY" id="kBq-X0-Oh1"/>
                                             <constraint firstAttribute="bottom" secondItem="xx6-iB-pwC" secondAttribute="bottom" constant="26" id="kb1-j2-qWG"/>
                                             <constraint firstAttribute="centerX" secondItem="UQm-Db-mKb" secondAttribute="centerX" id="kue-rj-oGM"/>
                                             <constraint firstAttribute="trailing" secondItem="cXg-Tg-DLf" secondAttribute="trailing" constant="20" id="oVD-i0-8SS"/>
                                             <constraint firstItem="cXg-Tg-DLf" firstAttribute="top" secondItem="xx6-iB-pwC" secondAttribute="bottom" constant="20" id="pCP-39-6Z2"/>
-                                            <constraint firstItem="bPU-ZA-2M8" firstAttribute="top" secondItem="UQm-Db-mKb" secondAttribute="bottom" constant="20" id="prO-rC-dWL"/>
+                                            <constraint firstItem="bPU-ZA-2M8" firstAttribute="top" secondItem="UQm-Db-mKb" secondAttribute="bottom" constant="-58" id="prO-rC-dWL"/>
+                                            <constraint firstItem="vwB-O9-vEU" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" id="rV5-YW-Xsz"/>
+                                            <constraint firstItem="dfY-G6-jEd" firstAttribute="leading" secondItem="K2Y-8a-qLP" secondAttribute="leading" id="tFs-sD-uY7"/>
                                             <constraint firstAttribute="centerX" secondItem="bPU-ZA-2M8" secondAttribute="centerX" id="vUO-nR-YUl"/>
                                             <constraint firstItem="ebs-QW-EAg" firstAttribute="top" secondItem="8jU-u9-izq" secondAttribute="bottom" constant="20" id="xDG-Ja-dqr"/>
                                             <constraint firstAttribute="centerX" secondItem="7mi-NS-L7i" secondAttribute="centerX" id="yA3-NX-fDe"/>
@@ -672,7 +693,7 @@ Two times at WWDC!</string>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="1600"/>
+                    <size key="freeformSize" width="600" height="1327"/>
                     <connections>
                         <outlet property="btnGithubRepo" destination="UQm-Db-mKb" id="g3k-Va-pY3"/>
                         <outlet property="cntGithubRepo" destination="ahj-GG-T3X" id="52h-h7-aKb"/>
